fix the metadata to reflect the same copyright information as in the pod

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name                = MooseX-AttributeHelpers
 author              = Stevan Little <stevan@iinteractive.com>
-copyright_holder    = Stevan Little
+copyright_holder    = Stevan Little and Infinity Interactive, Inc.
 copyright_year      = 2007
 license             = Perl_5
 
