use new-style authority config

--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,8 @@ copyright_year      = 2007
 license             = Perl_5
 
 [@Author::ETHER]
-:version = 0.103
-Authority.authority = cpan:STEVAN
+:version = 0.117
+authority = cpan:STEVAN
 Test::MinimumVersion.max_target_perl = 5.008003
 -remove = Test::EOL
 -remove = Test::CleanNamespaces
