add authordep for extra weaver plugin

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,8 @@ Test::MinimumVersion.max_target_perl = 5.008003
 -remove = Test::PodSpelling
 -remove = Test::CPAN::Changes
 
+; authordep Pod::Weaver::Section::AllowOverride
+
 [Prereqs / TestRequires]
 Test::Exception = 0.21
 
